--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "postcss-at-rule-parser",
   "version": "0.0.1",
   "description": "",
-  "main": "dist/index.bundle.js",
+  "main": "dist/index.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "dev": "rollup -c rollup.config.js --watch",
@@ -59,6 +65,7 @@
     "postcss": "^8.4.14"
   },
   "dependencies": {
+    "auto-bind": "^5.0.1",
     "css-tree": "^2.1.0"
   }
 }
