--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "dev": "rollup -c rollup.config.js --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "format": "run-p format:js format:md format:json",
     "format:js": "prettier --config ./package.json --write './src/**/*.{js,ts,mjs}'",
     "format:md": "prettier --parser markdown --write './**/*.md'",
     "format:json": "prettier --parser json --write './**/*.json'",
     "lint": "eslint . -c ./.eslintrc.yml './src/**/*.{ts,tsx,js}'",
     "lint:fix": "eslint . -c ./.eslintrc.yml './src/**/*.{ts,tsx,js}' --fix",
-    "build:wasm": "wasm-pack build --target nodejs --out-name index --release"
+    "build:wasm": "wasm-pack build --target nodejs --out-name index --release",
+    "artifacts": "napi artifacts",
+    "build:node": "napi build --platform --release",
+    "build:debug": "napi build --platform",
+    "prepublishOnly": "napi prepublish -t npm",
+    "version": "napi version"
   },
   "repository": "postcss/postcss-at-rule-parser",
   "keywords": [
@@ -34,6 +39,22 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
+  },
+  "napi": {
+    "name": "postcss-at-rule-parser",
+    "triples": {
+      "additional": [
+        "aarch64-apple-darwin",
+        "aarch64-linux-android",
+        "aarch64-unknown-linux-gnu",
+        "aarch64-unknown-linux-musl",
+        "aarch64-pc-windows-msvc",
+        "armv7-unknown-linux-gnueabihf",
+        "x86_64-unknown-linux-musl",
+        "i686-pc-windows-msvc",
+        "armv7-linux-androideabi"
+      ]
+    }
   },
   "prettier": {
     "printWidth": 120,
@@ -60,7 +81,9 @@
     "rollup": "^2.77.0",
     "rollup-plugin-typescript2": "^0.32.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@napi-rs/cli": "^2.11.4",
+    "ava": "^4.3.0"
   },
   "peerDependencies": {
     "postcss": "^8.4.14"
@@ -68,5 +91,8 @@
   "dependencies": {
     "auto-bind": "^5.0.1",
     "css-tree": "^2.1.0"
+  },
+  "engines": {
+    "node": ">= 10"
   }
 }
