--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-    "name": "postcss-at-rule-parser",
-    "version": "0.0.1",
-    "description": "",
-    "main": "dist/index.cjs",
-    "exports": {
-        ".": {
-            "import": "./dist/index.esm.js",
-            "require": "./dist/index.cjs"
-        }
-    },
-    "scripts": {
-        "build": "rollup -c rollup.config.js",
-        "dev": "rollup -c rollup.config.js --watch",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "format": "run-p format:js format:md format:json",
-        "format:js": "prettier --config ./package.json --write \"./src/**/*.{js,ts,mjs}\"",
-        "format:md": "prettier --parser markdown --write \"./**/*.md\"",
-        "format:json": "prettier --parser json --write \"./**/*.json\"",
-        "lint": "eslint . -c ./.eslintrc.yml \"./src/**/*.{ts,tsx,js}\"",
-        "lint:fix": "eslint . -c ./.eslintrc.yml \"./src/**/*.{ts,tsx,js}\" --fix",
-        "build:wasm": "wasm-pack build --target nodejs --out-name index --release"
-    },
-    "repository": "postcss/postcss-at-rule-parser",
-    "keywords": ["postcss", "css", "parser", "at-rule", "media queries"],
-    "author": "yisibl(一丝)",
-    "license": "MIT",
-    "publishConfig": {
-        "registry": "https://registry.npmjs.org/",
-        "access": "public"
-    },
-    "prettier": {
-        "printWidth": 120,
-        "semi": true,
-        "trailingComma": "all",
-        "singleQuote": false,
-        "arrowParens": "always",
-        "tabWidth": 4
-    },
-    "devDependencies": {
-        "@rollup/plugin-commonjs": "^22.0.1",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "@types/css-tree": "^1.0.7",
-        "@types/node": "^18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.30.7",
-        "@typescript-eslint/parser": "^5.30.7",
-        "eslint": "^8.20.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.14",
-        "prettier": "^2.7.1",
-        "rollup": "^2.77.0",
-        "rollup-plugin-typescript2": "^0.32.1",
-        "tslib": "^2.4.0",
-        "typescript": "^4.7.4"
-    },
-    "peerDependencies": {
-        "postcss": "^8.4.14"
-    },
-    "dependencies": {
-        "auto-bind": "^5.0.1",
-        "css-tree": "^2.1.0"
+  "name": "postcss-at-rule-parser",
+  "version": "0.0.1",
+  "description": "",
+  "main": "dist/index.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs"
     }
+  },
+  "scripts": {
+    "build": "rollup -c rollup.config.js",
+    "dev": "rollup -c rollup.config.js --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "run-p format:js format:md format:json",
+    "format:js": "prettier --config ./package.json --write \"./src/**/*.{js,ts,mjs}\"",
+    "format:md": "prettier --parser markdown --write \"./**/*.md\"",
+    "format:json": "prettier --parser json --write \"./**/*.json\"",
+    "lint": "eslint . -c ./.eslintrc.yml \"./src/**/*.{ts,tsx,js}\"",
+    "lint:fix": "eslint . -c ./.eslintrc.yml \"./src/**/*.{ts,tsx,js}\" --fix",
+    "build:wasm": "wasm-pack build --target nodejs --out-name index --release"
+  },
+  "repository": "postcss/postcss-at-rule-parser",
+  "keywords": ["postcss", "css", "parser", "at-rule", "media queries"],
+  "author": "yisibl(一丝)",
+  "license": "MIT",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false,
+    "trailingComma": "all",
+    "singleQuote": true,
+    "arrowParens": "always",
+    "tabWidth": 2
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/css-tree": "^1.0.7",
+    "@types/node": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "rollup": "^2.77.0",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "postcss": "^8.4.14"
+  },
+  "dependencies": {
+    "auto-bind": "^5.0.1",
+    "css-tree": "^2.1.0"
+  }
 }
