--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "dev": "rollup -c rollup.config.js --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "format": "run-p format:js format:md format:json",
     "format:js": "prettier --config ./package.json --write \"./src/**/*.{js,ts,mjs}\"",
     "format:md": "prettier --parser markdown --write \"./**/*.md\"",
@@ -22,7 +22,13 @@
     "build:wasm": "wasm-pack build --target nodejs --out-name index --release"
   },
   "repository": "postcss/postcss-at-rule-parser",
-  "keywords": ["postcss", "css", "parser", "at-rule", "media queries"],
+  "keywords": [
+    "postcss",
+    "css",
+    "parser",
+    "at-rule",
+    "media queries"
+  ],
   "author": "yisibl(一丝)",
   "license": "MIT",
   "publishConfig": {
@@ -40,20 +46,23 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@types/css-tree": "^1.0.7",
+    "@types/css-tree": "^2.0.0",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "rollup": "^2.77.0",
     "rollup-plugin-typescript2": "^0.32.1",
+    "ts-jest": "^29.0.3",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
     "postcss": "^8.4.14"
